# workshop

./: README.md
te-dev/apps/ta_core_watcher/: build.sh  main.c  meson.build  meson_options.txt
te-dev/lib/ta_job/: meson.build  ta_job.c  ta_job.h
te-dev/lib/tapi_dpdk/: meson.build  tapi_dpdk.c  tapi_dpdk.h  tapi_dpdk_stats.c  tapi_dpdk_stats.h  tapi_l2fwd.c  tapi_l2fwd.h  tapi_rte_flow.c  tapi_rte_flow.h
te-dev/lib/tapi_performance/: iperf.c  iperf.h  iperf3.c  iperf3.h  meson.build  performance_internal.c  performance_internal.h  tapi_performance.c  tapi_performance.h
te-dev/suites/selftest/ts/rpc/: meson.build  package.xml
te-dev/suites/selftest/ts/rpc/memory/: memory.c  memory_suite.h  meson.build  package.xml
te-dev/suites/selftest/ts/rpc/server/: meson.build  package.xml  rpc_server_prologue.c  rpc_suite.h  rpctest.c  rs_threads_sr.c
te-dev/suites/selftest/ts/rpc/unistd/: append.c  ioctl_blkflsbuf.c  meson.build  mkdir.c  package.xml  pread_pwrite.c  truncate.c  unistd_suite.h
te-dev/suites/selftest/ts/tapi/: meson.build  package.xml
te-dev/suites/selftest/ts/tapi/cache/: meson.build  package.xml  tc_actualize_indirect.c  tc_actualize_root.c  tc_actualize_star.c  tc_actualize_sub.c  tc_actualize_unregistered.c  tc_invalidate.c  tc_invalidate_all.c  tc_operation_add_get.c  tc_operation_del.c  tc_operation_find.c  tc_operation_get.c  tc_prologue.c  tc_register.c
te-dev/suites/selftest/ts/tapi/dns/: meson.build  package.xml  prologue.c  unbound.c  zone_file.c
te-dev/suites/selftest/ts/tapi/file/: file_copy.c  file_create_delete.c  file_create_pattern.c  file_expand.c  file_get.c  file_put.c  file_read.c  file_resolve.c  file_suite.h  file_write.c  meson.build  package.xml
te-dev/suites/selftest/ts/tapi/fio/: fio.c  fio_suite.h  meson.build  package.xml
te-dev/suites/selftest/ts/tapi/job/: cfg_basic_operations.c  epilogue.c  meson.build  package.xml  prologue.c
te-dev/suites/selftest/ts/tapi/jobopt/: meson.build  package.xml  sample.c
te-dev/suites/selftest/ts/tapi/tool/: meson.build  package.xml
te-dev/suites/selftest/ts/tapi/tool/haproxy/: haproxy.c  haproxy.h  meson.build  package.xml
te-dev/suites/selftest/ts/tapi/tool/memcached/: memaslap.c  memcached.c  memcached.h  memtier.c  meson.build  package.xml
te-dev/suites/selftest/ts/tapi/tool/nptcp/: meson.build  netpipe.h  np.c  np_prologue.c  np_with_destroy.c  np_with_kill.c  np_with_stop.c  package.xml
te-dev/suites/selftest/ts/tapi/tool/perf/: meson.build  package.xml  perf.h  (+2 more)
te-dev/suites/selftest/ts/tapi/upnp/: get_content.c  get_devices.c  get_services.c  invoke_action.c  meson.build  package.xml  upnp_cp_epilogue.c  upnp_cp_prologue.c  upnp_cp_ts.h
te-dev/tools/rgt/rgt-idx/: apply.c  check-sort-mem  common.h  fake.c  make.c  meson.build  sort-mem.c  sort-vrfy.c
(+2252 files in other folders)
