# SPDX-License-Identifier: Apache-2.0

headers += files(
    'tapi_dpdk.h',
    'tapi_dpdk_stats.h',
    'tapi_l2fwd.h',
    'tapi_rte_flow.h',
)
sources += files(
    'tapi_dpdk.c',
    'tapi_dpdk_stats.c',
    'tapi_l2fwd.c',
    'tapi_rte_flow.c',
)
te_libs += [
    'rpcc_dpdk',
    'tapi',
    'tapi_job',
]
